--- a/style/main.css
+++ b/style/main.css
@@ -109,3 +109,11 @@ body
 {
     background-image: url(../img/projects/4.jpg);
 }
+#skills
+{
+    background-image: url(../img/img5.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    filter: grayscale(0.5);
+}
