--- a/style/main.css
+++ b/style/main.css
@@ -21,7 +21,7 @@ body
 }
 #intro
 {
-    background-image: url(../img/img1.jpg);
+    background-image: url(../img/img1.webp);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -30,18 +30,18 @@ body
 }
 #intro h1
 {
-    font-size: 90px;
+    font-size: 6rem;
     color: white;
     
 }
 #intro p
 {
-    font-size: 60px;
+    font-size: 3rem;
     color: white;
 }
 #aboutme
 {
-    background-image: url(../img/img3.jpg);
+    background-image: url(../img/img3.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -63,7 +63,7 @@ body
 {
     justify-content: flex-start;
     padding: 100px;
-    background-image: url(../img/img4.jpg);
+    background-image: url(../img/img4.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -92,28 +92,64 @@ body
     background-position: center;
     background-size: cover;
     filter: grayscale(0.8);
+    transition: .5s;
+}
+.project:hover
+{
+    width: 40%;
+    filter: none;
+    cursor: pointer;
 }
 #project1
 {
-    background-image: url(../img/projects/1.jpg);
+    background-image: url(../img/projects/1.webp);
 }
 #project2
 {
-    background-image: url(../img/projects/2.jpg);
+    background-image: url(../img/projects/2.webp);
 }
 #project3
 {
-    background-image: url(../img/projects/3.jpg);
+    background-image: url(../img/projects/3.webp);
 }
 #project4
 {
-    background-image: url(../img/projects/4.jpg);
+    background-image: url(../img/projects/4.webp);
 }
 #skills
 {
-    background-image: url(../img/img5.jpg);
+    background-image: url(../img/img5.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     filter: grayscale(0.5);
+   
+}
+#skills h2
+{
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+.skillsbox
+{
+    height: 60vh;
+    width: 60vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.skill
+{
+    width: 24%;
+    height: 48%;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.skill p
+{
+    font-size: 2rem;
 }
