--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,9 @@
+html
+{
+    scroll-behavior: smooth;
+}
+
+
 *
 {
     margin: 0;
@@ -9,6 +15,20 @@ body
    color: white;
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
+}
+#arrow
+{
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(90deg) scale(0.7);
+    filter: grayscale(0.8);
+    transition: .6s;
+}
+#arrow:hover
+{
+    transform: translate(-50%,-50%) rotate(90deg) scale(1);
+    transition: .6s;
 }
 .box
 {
@@ -27,6 +47,7 @@ body
     background-position: center;
     background-size: cover;
     filter: grayscale(0.8);
+    position: relative;
 }
 #intro h1
 {
@@ -47,6 +68,7 @@ body
     background-size: cover;
     align-items: flex-end;
     padding: 10vw;
+    position: relative;
 }
 #aboutme h2
 {
@@ -67,6 +89,7 @@ body
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 #projects h2
 {
@@ -123,7 +146,7 @@ body
     background-position: center;
     background-size: cover;
     filter: grayscale(0.5);
-   
+   position: relative;
 }
 #skills h2
 {
@@ -143,13 +166,16 @@ body
 {
     width: 24%;
     height: 48%;
-    background: black;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 }
 .skill p
 {
     font-size: 2rem;
+}
+.skill img
+{
+    height: 100px;
 }
